// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="marger__StyledMarger-q3lecu-0 fsRJyG"
  >
    <img
      alt=""
      data-radium={true}
      src="#image"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 gNBLBo"
  >
    <div
      data-radium={true}
    >
      <div
        className="marger__StyledMarger-q3lecu-0 iyINNV"
      >
        <h1
          className="k-Title k-Title--senary k-Title--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<VerticalCard /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="marger__StyledMarger-q3lecu-0 fsRJyG"
  >
    <img
      alt="Image alt"
      data-radium={true}
      src="#image"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 gNBLBo"
  >
    <div
      data-radium={true}
    >
      <div
        className="marger__StyledMarger-q3lecu-0 gkLTfi"
      >
        <h1
          className="k-Title k-Title--senary k-Title--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 WSKaG"
      >
        <p
          className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom text
        </p>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
